yarn.lock restored

--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "bump:major": "npx lerna version major"
   },
   "dependencies": {
-    "consola": "^2.15.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0"
+    "consola": "2.15.0",
+    "cross-env": "7.0.3",
+    "dotenv": "8.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/register": "^7.12.10",
-    "@nuxtjs/eslint-config": "^5.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "if-env": "^1.0.4",
-    "lerna": "^3.22.1",
-    "nodemon": "^2.0.6",
-    "standard": "^16.0.3"
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "@babel/register": "7.12.10",
+    "@nuxtjs/eslint-config": "5.0.0",
+    "@nuxtjs/eslint-module": "3.0.2",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.17.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "if-env": "1.0.4",
+    "lerna": "3.22.1",
+    "nodemon": "2.0.6",
+    "standard": "16.0.3"
   }
 }
